# mimalloc

./: meson.build
test/: meson.build
